# cookiecutter-py-rust

{{ cookiecutter.project_slug }}/: Cargo.toml  setup.py
{{ cookiecutter.project_slug }}/src/: lib.rs
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: __init__.py
