[package]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.version }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
edition = "2018"

[lib]
name = "{{ cookiecutter.project_slug }}"
crate-type = ["cdylib"]

[dependencies]

[dependencies.pyo3]
version = "0.9.0-alpha.1"
features = ["extension-module"]
